ffi/pigpio.h

#define PIGPIO_VERSION 78
#define PI_INPFIFO "/dev/pigpio"
#define PI_OUTFIFO "/dev/pigout"
#define PI_ERRFIFO "/dev/pigerr"
#define PI_ENVPORT "PIGPIO_PORT"
#define PI_ENVADDR "PIGPIO_ADDR"
#define PI_LOCKFILE "/var/run/pigpio.pid"
#define PI_I2C_COMBINED "/sys/module/i2c_bcm2708/parameters/combined"
typedef struct
{
   uint16_t func;
   uint16_t size;
} gpioHeader_t;
typedef struct
{
   size_t size;
   void *ptr;
   uint32_t data;
} gpioExtent_t;
typedef struct
{
   uint32_t tick;
   uint32_t level;
} gpioSample_t;
typedef struct
{
   uint16_t seqno;
   uint16_t flags;
   uint32_t tick;
   uint32_t level;
} gpioReport_t;
typedef struct
{
   uint32_t gpioOn;
   uint32_t gpioOff;
   uint32_t usDelay;
} gpioPulse_t;
#define WAVE_FLAG_READ  1
#define WAVE_FLAG_TICK  2
typedef struct
{
   uint32_t gpioOn;
   uint32_t gpioOff;
   uint32_t usDelay;
   uint32_t flags;
} rawWave_t;
typedef struct
{
   uint16_t botCB;  
   uint16_t topCB;  
   uint16_t botOOL; 
   uint16_t topOOL; 
   uint16_t deleted;
   uint16_t numCB;
   uint16_t numBOOL;
   uint16_t numTOOL;
} rawWaveInfo_t;
typedef struct
{
   int clk;     
   int mosi;    
   int miso;    
   int ss_pol;  
   int ss_us;   
   int clk_pol; 
   int clk_pha; 
   int clk_us;  
} rawSPI_t;
typedef struct { 
   uint32_t info;
   uint32_t src;
   uint32_t dst;
   uint32_t length;
   uint32_t stride;
   uint32_t next;
   uint32_t pad[2];
} rawCbs_t;
typedef struct
{
   uint16_t addr;  
   uint16_t flags;
   uint16_t len;   
   uint8_t  *buf;  
} pi_i2c_msg_t;
#define BSC_FIFO_SIZE 512
typedef struct
{
   uint32_t control;          
   int rxCnt;                 
   char rxBuf[BSC_FIFO_SIZE]; 
   int txCnt;                 
   char txBuf[BSC_FIFO_SIZE]; 
} bsc_xfer_t;
#define PI_MIN_GPIO       0
#define PI_MAX_GPIO      53
#define PI_MAX_USER_GPIO 31
#define PI_OFF   0
#define PI_ON    1
#define PI_CLEAR 0
#define PI_SET   1
#define PI_LOW   0
#define PI_HIGH  1
#define PI_TIMEOUT 2
#define PI_INPUT  0
#define PI_OUTPUT 1
#define PI_ALT0   4
#define PI_ALT1   5
#define PI_ALT2   6
#define PI_ALT3   7
#define PI_ALT4   3
#define PI_ALT5   2
#define PI_PUD_OFF  0
#define PI_PUD_DOWN 1
#define PI_PUD_UP   2
#define PI_DEFAULT_DUTYCYCLE_RANGE   255
#define PI_MIN_DUTYCYCLE_RANGE        25
#define PI_MAX_DUTYCYCLE_RANGE     40000
#define PI_SERVO_OFF 0
#define PI_MIN_SERVO_PULSEWIDTH 500
#define PI_MAX_SERVO_PULSEWIDTH 2500
#define PI_HW_PWM_MIN_FREQ 1
#define PI_HW_PWM_MAX_FREQ      125000000
#define PI_HW_PWM_MAX_FREQ_2711 187500000
#define PI_HW_PWM_RANGE 1000000
#define PI_HW_CLK_MIN_FREQ       4689
#define PI_HW_CLK_MIN_FREQ_2711 13184
#define PI_HW_CLK_MAX_FREQ      250000000
#define PI_HW_CLK_MAX_FREQ_2711 375000000
#define PI_NOTIFY_SLOTS  32
#define PI_NTFY_FLAGS_EVENT    (1 <<7)
#define PI_NTFY_FLAGS_ALIVE    (1 <<6)
#define PI_NTFY_FLAGS_WDOG     (1 <<5)
#define PI_WAVE_BLOCKS     4
#define PI_WAVE_MAX_PULSES (PI_WAVE_BLOCKS * 3000)
#define PI_WAVE_MAX_CHARS  (PI_WAVE_BLOCKS *  300)
#define PI_BB_I2C_MIN_BAUD     50
#define PI_BB_I2C_MAX_BAUD 500000
#define PI_BB_SPI_MIN_BAUD     50
#define PI_BB_SPI_MAX_BAUD 250000
#define PI_BB_SER_MIN_BAUD     50
#define PI_BB_SER_MAX_BAUD 250000
#define PI_BB_SER_NORMAL 0
#define PI_BB_SER_INVERT 1
#define PI_WAVE_MIN_BAUD      50
#define PI_WAVE_MAX_BAUD 1000000
#define PI_SPI_MIN_BAUD     32000
#define PI_SPI_MAX_BAUD 125000000