lib/src/bindings_pi.dart


class __pthread_cleanup_frame extends ffi.Struct {
  ffi.Pointer<ffi.NativeFunction<_typedefC_4>> __cancel_routine;

  ffi.Pointer<ffi.Void> __cancel_arg;

  @ffi.Int32()
  int __do_it;

  @ffi.Int32()
  int __cancel_type;
}

class __jmp_buf_tag extends ffi.Struct {}

class gpioHeader_t extends ffi.Struct {
  @ffi.Uint16()
  int func;

  @ffi.Uint16()
  int size;
}

class gpioExtent_t extends ffi.Struct {
  @ffi.Uint64()
  int size;

  ffi.Pointer<ffi.Void> ptr;

  @ffi.Uint32()
  int data;
}

class gpioSample_t extends ffi.Struct {
  @ffi.Uint32()
  int tick;

  @ffi.Uint32()
  int level;
}

class gpioReport_t extends ffi.Struct {
  @ffi.Uint16()
  int seqno;

  @ffi.Uint16()
  int flags;

  @ffi.Uint32()
  int tick;

  @ffi.Uint32()
  int level;
}

class gpioPulse_t extends ffi.Struct {
  @ffi.Uint32()
  int gpioOn;

  @ffi.Uint32()
  int gpioOff;

  @ffi.Uint32()
  int usDelay;
}

class rawWave_t extends ffi.Struct {
  @ffi.Uint32()
  int gpioOn;

  @ffi.Uint32()
  int gpioOff;

  @ffi.Uint32()
  int usDelay;

  @ffi.Uint32()
  int flags;
}

class rawWaveInfo_t extends ffi.Struct {
  @ffi.Uint16()
  int botCB;

  @ffi.Uint16()
  int topCB;

  @ffi.Uint16()
  int botOOL;

  @ffi.Uint16()
  int topOOL;

  @ffi.Uint16()
  int deleted;

  @ffi.Uint16()
  int numCB;

  @ffi.Uint16()
  int numBOOL;

  @ffi.Uint16()
  int numTOOL;
}

class rawSPI_t extends ffi.Struct {
  @ffi.Int32()
  int clk;

  @ffi.Int32()
  int mosi;

  @ffi.Int32()
  int miso;

  @ffi.Int32()
  int ss_pol;

  @ffi.Int32()
  int ss_us;

  @ffi.Int32()
  int clk_pol;

  @ffi.Int32()
  int clk_pha;

  @ffi.Int32()
  int clk_us;
}

class rawCbs_t extends ffi.Struct {}

class pi_i2c_msg_t extends ffi.Struct {
  @ffi.Uint16()
  int addr;

  @ffi.Uint16()
  int flags;

  @ffi.Uint16()
  int len;

  ffi.Pointer<ffi.Uint8> buf;
}

class bsc_xfer_t extends ffi.Struct {}

const int PTHREAD_CREATE_JOINABLE = 0;

const int PTHREAD_CREATE_DETACHED = 1;

const int PTHREAD_MUTEX_TIMED_NP = 0;

const int PTHREAD_MUTEX_RECURSIVE_NP = 1;

const int PTHREAD_MUTEX_ERRORCHECK_NP = 2;

const int PTHREAD_MUTEX_ADAPTIVE_NP = 3;

const int PTHREAD_MUTEX_NORMAL = 0;

const int PTHREAD_MUTEX_RECURSIVE = 1;

const int PTHREAD_MUTEX_ERRORCHECK = 2;

const int PTHREAD_MUTEX_DEFAULT = 0;

const int PTHREAD_MUTEX_STALLED = 0;

const int PTHREAD_MUTEX_STALLED_NP = 0;

const int PTHREAD_MUTEX_ROBUST = 1;

const int PTHREAD_MUTEX_ROBUST_NP = 1;

const int PTHREAD_PRIO_NONE = 0;

const int PTHREAD_PRIO_INHERIT = 1;

const int PTHREAD_PRIO_PROTECT = 2;

const int PTHREAD_RWLOCK_PREFER_READER_NP = 0;

const int PTHREAD_RWLOCK_PREFER_WRITER_NP = 1;

const int PTHREAD_RWLOCK_PREFER_WRITER_NONRECURSIVE_NP = 2;

const int PTHREAD_RWLOCK_DEFAULT_NP = 0;

const int PTHREAD_INHERIT_SCHED = 0;

const int PTHREAD_EXPLICIT_SCHED = 1;

const int PTHREAD_SCOPE_SYSTEM = 0;

const int PTHREAD_SCOPE_PROCESS = 1;

const int PTHREAD_PROCESS_PRIVATE = 0;

const int PTHREAD_PROCESS_SHARED = 1;

const int PTHREAD_CANCEL_ENABLE = 0;

const int PTHREAD_CANCEL_DISABLE = 1;

const int PTHREAD_CANCEL_DEFERRED = 0;

const int PTHREAD_CANCEL_ASYNCHRONOUS = 1;

const int _STDINT_H = 1;

const int _FEATURES_H = 1;

const int _DEFAULT_SOURCE = 1;

const int __GLIBC_USE_ISOC2X = 1;

const int __USE_ISOC11 = 1;

const int __USE_ISOC99 = 1;

const int __USE_ISOC95 = 1;

const int _POSIX_SOURCE = 1;

const int _POSIX_C_SOURCE = 200809;

const int __USE_POSIX = 1;

const int __USE_POSIX2 = 1;

const int __USE_POSIX199309 = 1;

const int __USE_POSIX199506 = 1;

const int __USE_XOPEN2K = 1;

const int __USE_XOPEN2K8 = 1;

const int _ATFILE_SOURCE = 1;

const int __USE_MISC = 1;

const int __USE_ATFILE = 1;

const int __USE_FORTIFY_LEVEL = 0;

const int __GLIBC_USE_DEPRECATED_GETS = 0;

const int __GLIBC_USE_DEPRECATED_SCANF = 0;

const int _STDC_PREDEF_H = 1;

const int __STDC_IEC_559__ = 1;

const int __STDC_IEC_559_COMPLEX__ = 1;

const int __STDC_ISO_10646__ = 201706;

const int __GNU_LIBRARY__ = 6;

const int __GLIBC__ = 2;

const int __GLIBC_MINOR__ = 32;

const int _SYS_CDEFS_H = 1;

const int __glibc_c99_flexarr_available = 1;

const int __WORDSIZE = 64;

const int __WORDSIZE_TIME64_COMPAT32 = 0;

const int __LDOUBLE_REDIRECTS_TO_FLOAT128_ABI = 0;

const int __HAVE_GENERIC_SELECTION = 0;

const int __GLIBC_USE_LIB_EXT2 = 1;

const int __GLIBC_USE_IEC_60559_BFP_EXT = 1;

const int __GLIBC_USE_IEC_60559_BFP_EXT_C2X = 1;

const int __GLIBC_USE_IEC_60559_FUNCS_EXT = 1;

const int __GLIBC_USE_IEC_60559_FUNCS_EXT_C2X = 1;

const int __GLIBC_USE_IEC_60559_TYPES_EXT = 1;

const int _BITS_TYPES_H = 1;

const int __TIMESIZE = 64;

const int _BITS_TYPESIZES_H = 1;

const int __OFF_T_MATCHES_OFF64_T = 1;

const int __INO_T_MATCHES_INO64_T = 1;

const int __RLIM_T_MATCHES_RLIM64_T = 1;

const int __STATFS_MATCHES_STATFS64 = 1;

const int __KERNEL_OLD_TIMEVAL_MATCHES_TIMEVAL64 = 1;

const int __FD_SETSIZE = 1024;

const int _BITS_TIME64_H = 1;

const int _BITS_WCHAR_H = 1;

const int __WCHAR_MAX = 4294967295;

const int __WCHAR_MIN = 0;

const int _BITS_STDINT_INTN_H = 1;

const int _BITS_STDINT_UINTN_H = 1;

const int INT8_MIN = -128;

const int INT16_MIN = -32768;

const int INT32_MIN = -2147483648;

const int INT64_MIN = -9223372036854775808;

const int INT8_MAX = 127;

const int INT16_MAX = 32767;

const int INT32_MAX = 2147483647;

const int INT64_MAX = 9223372036854775807;

const int UINT8_MAX = 255;

const int UINT16_MAX = 65535;

const int UINT32_MAX = 4294967295;

const int UINT64_MAX = -1;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST8_MAX = 127;

const int INT_LEAST16_MAX = 32767;

const int INT_LEAST32_MAX = 2147483647;

const int INT_LEAST64_MAX = 9223372036854775807;

const int UINT_LEAST8_MAX = 255;

const int UINT_LEAST16_MAX = 65535;

const int UINT_LEAST32_MAX = 4294967295;

const int UINT_LEAST64_MAX = -1;

const int INT_FAST8_MIN = -128;

const int INT_FAST16_MIN = -9223372036854775808;

const int INT_FAST32_MIN = -9223372036854775808;

const int INT_FAST64_MIN = -9223372036854775808;

const int INT_FAST8_MAX = 127;

const int INT_FAST16_MAX = 9223372036854775807;

const int INT_FAST32_MAX = 9223372036854775807;

const int INT_FAST64_MAX = 9223372036854775807;

const int UINT_FAST8_MAX = 255;

const int UINT_FAST16_MAX = -1;

const int UINT_FAST32_MAX = -1;

const int UINT_FAST64_MAX = -1;

const int INTPTR_MIN = -9223372036854775808;

const int INTPTR_MAX = 9223372036854775807;

const int UINTPTR_MAX = -1;

const int INTMAX_MIN = -9223372036854775808;

const int INTMAX_MAX = 9223372036854775807;

const int UINTMAX_MAX = -1;

const int PTRDIFF_MIN = -9223372036854775808;

const int PTRDIFF_MAX = 9223372036854775807;

const int SIG_ATOMIC_MIN = -2147483648;

const int SIG_ATOMIC_MAX = 2147483647;

const int SIZE_MAX = -1;

const int WCHAR_MIN = 0;

const int WCHAR_MAX = 4294967295;

const int WINT_MIN = 0;

const int WINT_MAX = 4294967295;

const int _PTHREAD_H = 1;

const int _SCHED_H = 1;

const int NULL = 0;

const int __time_t_defined = 1;

const int _STRUCT_TIMESPEC = 1;

const int _BITS_ENDIAN_H = 1;

const int __LITTLE_ENDIAN = 1234;

const int __BIG_ENDIAN = 4321;

const int __PDP_ENDIAN = 3412;

const int _BITS_ENDIANNESS_H = 1;

const int __BYTE_ORDER = 1234;

const int __FLOAT_WORD_ORDER = 1234;

const int _BITS_SCHED_H = 1;

const int SCHED_OTHER = 0;

const int SCHED_FIFO = 1;

const int SCHED_RR = 2;

const int _BITS_TYPES_STRUCT_SCHED_PARAM = 1;

const int _BITS_CPU_SET_H = 1;

const int __CPU_SETSIZE = 1024;

const int __NCPUBITS = 64;

const int _TIME_H = 1;

const int _BITS_TIME_H = 1;

const int CLOCKS_PER_SEC = 1000000;

const int CLOCK_REALTIME = 0;

const int CLOCK_MONOTONIC = 1;

const int CLOCK_PROCESS_CPUTIME_ID = 2;

const int CLOCK_THREAD_CPUTIME_ID = 3;

const int CLOCK_MONOTONIC_RAW = 4;

const int CLOCK_REALTIME_COARSE = 5;

const int CLOCK_MONOTONIC_COARSE = 6;

const int CLOCK_BOOTTIME = 7;

const int CLOCK_REALTIME_ALARM = 8;

const int CLOCK_BOOTTIME_ALARM = 9;

const int CLOCK_TAI = 11;

const int TIMER_ABSTIME = 1;

const int __clock_t_defined = 1;

const int __struct_tm_defined = 1;

const int __clockid_t_defined = 1;

const int __timer_t_defined = 1;

const int __itimerspec_defined = 1;

const int _BITS_TYPES_LOCALE_T_H = 1;

const int _BITS_TYPES___LOCALE_T_H = 1;

const int TIME_UTC = 1;

const int _BITS_PTHREADTYPES_COMMON_H = 1;

const int _THREAD_SHARED_TYPES_H = 1;

const int _BITS_PTHREADTYPES_ARCH_H = 1;

const int __SIZEOF_PTHREAD_ATTR_T = 64;

const int __SIZEOF_PTHREAD_MUTEX_T = 48;

const int __SIZEOF_PTHREAD_MUTEXATTR_T = 8;

const int __SIZEOF_PTHREAD_CONDATTR_T = 8;

const int __SIZEOF_PTHREAD_RWLOCK_T = 56;

const int __SIZEOF_PTHREAD_BARRIER_T = 32;

const int __SIZEOF_PTHREAD_BARRIERATTR_T = 8;

const int __SIZEOF_PTHREAD_COND_T = 48;

const int __SIZEOF_PTHREAD_RWLOCKATTR_T = 8;

const int _THREAD_MUTEX_INTERNAL_H = 1;

const int __PTHREAD_MUTEX_HAVE_PREV = 1;

const int __have_pthread_attr_t = 1;

const int _BITS_SETJMP_H = 1;

const int _SIGSET_NWORDS = 16;

const int PTHREAD_CREATE_JOINABLE_1 = 0;

const int PTHREAD_CREATE_DETACHED_1 = 1;

const int PTHREAD_INHERIT_SCHED_1 = 0;

const int PTHREAD_EXPLICIT_SCHED_1 = 1;

const int PTHREAD_SCOPE_SYSTEM_1 = 0;

const int PTHREAD_SCOPE_PROCESS_1 = 1;

const int PTHREAD_PROCESS_PRIVATE_1 = 0;

const int PTHREAD_PROCESS_SHARED_1 = 1;

const int PTHREAD_CANCEL_ENABLE_1 = 0;

const int PTHREAD_CANCEL_DISABLE_1 = 1;

const int PTHREAD_CANCEL_DEFERRED_1 = 0;

const int PTHREAD_CANCEL_ASYNCHRONOUS_1 = 1;

const int PTHREAD_ONCE_INIT = 0;

const int PTHREAD_BARRIER_SERIAL_THREAD = -1;

const int PIGPIO_VERSION = 78;

const String PI_INPFIFO = '/dev/pigpio';

const String PI_OUTFIFO = '/dev/pigout';

const String PI_ERRFIFO = '/dev/pigerr';

const String PI_ENVPORT = 'PIGPIO_PORT';

const String PI_ENVADDR = 'PIGPIO_ADDR';

const String PI_LOCKFILE = '/var/run/pigpio.pid';

const String PI_I2C_COMBINED = '/sys/module/i2c_bcm2708/parameters/combined';

const int WAVE_FLAG_READ = 1;

const int WAVE_FLAG_TICK = 2;

const int BSC_FIFO_SIZE = 512;

const int PI_MIN_GPIO = 0;

const int PI_MAX_GPIO = 53;

const int PI_MAX_USER_GPIO = 31;

const int PI_OFF = 0;

const int PI_ON = 1;

const int PI_CLEAR = 0;

const int PI_SET = 1;

const int PI_LOW = 0;

const int PI_HIGH = 1;

const int PI_TIMEOUT = 2;

const int PI_INPUT = 0;

const int PI_OUTPUT = 1;

const int PI_ALT0 = 4;

const int PI_ALT1 = 5;

const int PI_ALT2 = 6;

const int PI_ALT3 = 7;

const int PI_ALT4 = 3;

const int PI_ALT5 = 2;

const int PI_PUD_OFF = 0;

const int PI_PUD_DOWN = 1;

const int PI_PUD_UP = 2;

const int PI_DEFAULT_DUTYCYCLE_RANGE = 255;

const int PI_MIN_DUTYCYCLE_RANGE = 25;

const int PI_MAX_DUTYCYCLE_RANGE = 40000;

const int PI_SERVO_OFF = 0;

const int PI_MIN_SERVO_PULSEWIDTH = 500;

const int PI_MAX_SERVO_PULSEWIDTH = 2500;

const int PI_HW_PWM_MIN_FREQ = 1;

const int PI_HW_PWM_MAX_FREQ = 125000000;

const int PI_HW_PWM_MAX_FREQ_2711 = 187500000;

const int PI_HW_PWM_RANGE = 1000000;

const int PI_HW_CLK_MIN_FREQ = 4689;

const int PI_HW_CLK_MIN_FREQ_2711 = 13184;

const int PI_HW_CLK_MAX_FREQ = 250000000;

const int PI_HW_CLK_MAX_FREQ_2711 = 375000000;

const int PI_NOTIFY_SLOTS = 32;

const int PI_NTFY_FLAGS_EVENT = 128;

const int PI_NTFY_FLAGS_ALIVE = 64;

const int PI_NTFY_FLAGS_WDOG = 32;

const int PI_WAVE_BLOCKS = 4;

const int PI_WAVE_MAX_PULSES = 12000;

const int PI_WAVE_MAX_CHARS = 1200;

const int PI_BB_I2C_MIN_BAUD = 50;

const int PI_BB_I2C_MAX_BAUD = 500000;

const int PI_BB_SPI_MIN_BAUD = 50;

const int PI_BB_SPI_MAX_BAUD = 250000;

const int PI_BB_SER_MIN_BAUD = 50;

const int PI_BB_SER_MAX_BAUD = 250000;

const int PI_BB_SER_NORMAL = 0;

const int PI_BB_SER_INVERT = 1;

const int PI_WAVE_MIN_BAUD = 50;

const int PI_WAVE_MAX_BAUD = 1000000;

const int PI_SPI_MIN_BAUD = 32000;

const int PI_SPI_MAX_BAUD = 125000000;
